--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,25 @@
 name: ci
+
 on:
-  pull_request:
   push:
-    branches: [ main ]
+  pull_request:
 
 jobs:
   import-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: pip install -r requirements.txt
-      - run: python -c "import dq_autopilot.definitions; print('import ok')"
+
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Import check
+        run: |
+          python -c "import dq_autopilot"
+          python -c "from dq_autopilot.definitions import defs; print(defs)"
